feat: enhance C bindings and streamline project setup
- Introduces a top-level CMakeLists.txt for project organization.
- Updates `.gitignore` to generalize build directory exclusion.
- Removes `isort` pre-commit hook to simplify linting configuration.
- Upgrades Corrosion dependency in C bindings to version 0.5.
- Adds new error statuses and a helper function in C bindings.
- Deprecates `safetensors_dtype_size` in favor of `safetensors_dtype_bitsize`.
- Fixes minor formatting and import issues in Python scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ safetensors/**/Cargo.lock
 bindings/python/Cargo.lock
 bindings/c/Cargo.lock
 bindings/c/target
-bindings/c/build/
+build/
 bindings/c/include/
 *.bin
 *.h5
