feat(cpp): add C++ bindings for safetensors
Introduce C++ bindings for the safetensors library, enabling tensor
serialization and deserialization. Add CMake and Cargo files to facilitate integration and build configuration. Implement interoperability between Rust and C++ using `cxx` and define necessary data structures and conversions.

Refactor `.gitignore` to generalize ignored build files and directories.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-safetensors/target
-safetensors/**/Cargo.lock
-bindings/python/Cargo.lock
-bindings/c/Cargo.lock
-bindings/c/target
+Cargo.lock
+target/
 build/
 bindings/c/include/
 *.bin
