feat: add C++ bindings and enhance benchmarks
Introduces C++ bindings for SafeTensors with improved performance and usage documentation. Adds benchmarks comparing Python and C++ implementations, demonstrating significant speedups.

Updates build configurations to support C++20, examples, and benchmark generation. Improves metadata handling and tensor access with better data serialization.

Enhances compatibility by upgrading dependencies and workflows
for Rust and CMake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,14 @@
-cmake_minimum_required(VERSION 3.21)
+cmake_minimum_required(VERSION 3.23)
 
 project(safetensors)
 
-add_subdirectory(bindings/c)
+option(SAFETENSOR_C "Build c bindings" OFF)
+option(SAFETENSOR_CPP "Build cpp bindings" ON)
+
+if(SAFETENSOR_C)
+    add_subdirectory(bindings/c)
+endif()
+
+if(SAFETENSOR_CPP)
+    add_subdirectory(bindings/cpp)
+endif()
