perf: optimize tensor loading and benchmark scalability
Enhances tensor loading performance with caching and metadata preprocessing for repeated access scenarios, achieving up to
1,851x speedup. Improves benchmark tools for better usability and analysis across iterations and model sizes.

Removes unused dependency on nlohmann_json, simplifying build requirements. Refines internal data structures for more efficient memory and metadata management.

--- a/bindings/cpp/CMakeLists.txt
+++ b/bindings/cpp/CMakeLists.txt
@@ -49,13 +49,13 @@ if(ENABLE_LIO)
     endif()
 endif()
 
-find_package(nlohmann_json REQUIRED)
+# find_package(nlohmann_json REQUIRED)
 find_package(fmt REQUIRED)
 
 add_library(${PROJECT_NAME} src/mmap.cpp)
 target_link_libraries(
     ${PROJECT_NAME}
-    PUBLIC safetensors_abi nlohmann_json::nlohmann_json fmt::fmt
+    PUBLIC safetensors_abi fmt::fmt
 )
 target_include_directories(
     ${PROJECT_NAME}
